@@ -6,6 +6,7 @@ Process Hacker
  * Added highlighting for debugged processes
  * Added viewing/setting of process affinity
  * Fixed all handle leaks
+ * Added I/O counters to misc. info
 
 1.2.3.5
  * Added handle viewing/closing support
